--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-CONSUMER_PUBLIC=
-CONSUMER_PRIVATE=
-TOKEN_PUBLIC=1325331979-
-TOKEN_PRIVATE=
-MAPS_API=
-FIREBASE_API=
-FIREBASE_AUTH=
-FIREBASE_DATABASE=
-FIREBASE_STORAGE=
-FIREBASE_MESSAGING=
-FIREBASE_PROJECT=
+CONSUMER_PUBLIC=qEkOwxV37AQDGs7znK1Vr9RSH
+CONSUMER_PRIVATE=V1D4g1pzHQQnXyI6XJZXwxOGLmMgnxecrbXwxnDOszJ3P8VPSY
+TOKEN_PUBLIC=1325331979-VRCQOUH0NNSPAyQp0ct5sWzJU0HQsH3ybzNv2Zi
+TOKEN_PRIVATE=CzctI6howUNuLpCie5U0i3uXRniSvqZlGZ46Y4qeWlyoK
+MAPS_API=AIzaSyCBR3znMf2pEA8uJl9UsqxFvwPJQ9Z9_aI
+FIREBASE_API=AIzaSyCk_fWGqa9HpEexEsVof_xe0jsN67VJpzQ
+FIREBASE_AUTH=miproyecto-e1619.firebaseapp.com
+FIREBASE_DATABASE=https://miproyecto-e1619.firebaseio.com
+FIREBASE_STORAGE=miproyecto-e1619.appspot.com
+FIREBASE_MESSAGING=546507781561
+FIREBASE_PROJECT=miproyecto-e1619
